# ENGG_TuePM

./: .gitignore  CMakeLists.txt  README.md  platformio.ini
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  App.tsx  __old_app__.jsx  index.css
frontend/src/components/: ActivitySec.tsx  BridgeCard.tsx  BridgeIcon.tsx  ConsoleCommandPanel.tsx  CustomDropdown.tsx  DashCard.tsx  DesktopDashboard.tsx  MobileDashboard.tsx  TopNav.tsx  TrafficLightsCard.tsx  VehicleQueueCard.tsx
frontend/src/hooks/: useActivityLog.ts  useESPStatus.ts  useESPWebSocket.ts  usePacketTracking.ts
frontend/src/lib/: api.ts  schema.ts  wsClient.ts
frontend/src/types/: ActivitySec.ts  CustomDropdown.ts  DashCard.ts  GenTypes.ts
frontend/src/utils/: timeAgo.ts
include/: BridgeStateMachine.h  BridgeSystemDefs.h  CommandBus.h  ConsoleCommands.h  Controller.h  DetectionSystem.h  EventBus.h  LocalStateIndicator.h  Logger.h  MotorControl.h  SafetyManager.h  SignalControl.h  StateWriter.h  TrafficCounter.h  WebSocketServer.h
src/: BridgeStateMachine.cpp  CommandBus.cpp  ConsoleCommands.cpp  Controller.cpp  DetectionSystem.cpp  EventBus.cpp  LocalStateIndicator.cpp  Logger.cpp  MotorControl.cpp  SafetyManager.cpp  SignalControl.cpp  StateWriter.cpp  TrafficCounter.cpp  WebSocketServer.cpp  main.cpp
test/: test_SignalControl.cpp  test_detection_system.cpp
